[gd_scene load_steps=3 format=3 uid="uid://cskb6en7suhat"]

[ext_resource type="Script" path="res://addons/auto_collision_creator/my_dock.gd" id="1_kye4u"]
[ext_resource type="Script" path="res://addons/auto_collision_creator/directory_tree.gd" id="2_ixkoi"]

[node name="Auto Collision Creator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kye4u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Directory" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select a directory"

[node name="Tree" type="Tree" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
script = ExtResource("2_ixkoi")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Refresh directories"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 25)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "2. Choose a collision type"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
allow_reselect = true
auto_height = true
item_count = 3
item_0/text = "Create Convex Collision"
item_1/text = "Create Multiple Convex Collisions"
item_2/text = "Create Trimesh Collision"

[node name="SimplifiedCheckbox" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Single"

[node name="CreateAndSave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create collision & Save"

[connection signal="pressed" from="VBoxContainer/Button" to="VBoxContainer/Tree" method="_on_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="toggled" from="VBoxContainer/SimplifiedCheckbox" to="." method="_on_simplified_checkbox_toggled"]
[connection signal="pressed" from="VBoxContainer/CreateAndSave" to="." method="_on_create_and_save_pressed"]
